--- a/archimedes/sty/artstyle.sty
+++ b/archimedes/sty/artstyle.sty
@@ -15,12 +15,12 @@
 \RequirePackage{microtype}
 \RequirePackage{mleftright}
 \RequirePackage{natbib}
+\RequirePackage{pdfsync}
 \RequirePackage{tensor}
 \RequirePackage[inline]{showlabels}
 \RequirePackage{siunitx}
+\RequirePackage{subcaption}
 \RequirePackage[dvipsnames,table]{xcolor}
-%
-\RequirePackage{pdfsync}
 %
 \RequirePackage[xetex]{hyperref}
 \RequirePackage{hypcap}
