--- a/diffgeo/diffgeo.tex
+++ b/diffgeo/diffgeo.tex
@@ -17,8 +17,9 @@
 
 %\maketitle
 
-\input{./doc/genrel}
+%\input{./doc/genrel}
 %\input{./doc/tensrep}
+\input{./doc/metric}
 
 \bibliographystyle{aipnum4-1}
 \bibliography{./doc/references}
