--- a/diffgeo/sty/artstyle_old.sty
+++ b/diffgeo/sty/artstyle_old.sty
@@ -10,20 +10,16 @@
 \RequirePackage[pdalt]{bropd}
 \RequirePackage{colonequals}
 \RequirePackage{epigraph}
-\RequirePackage{graphicx}
 \RequirePackage[fixamsmath,disallowspaces]{mathtools}
 \RequirePackage{microtype}
 \RequirePackage{mleftright}
-\RequirePackage{natbib}
 \RequirePackage{tensor}
 \RequirePackage[inline]{showlabels}
-\RequirePackage{siunitx}
 \RequirePackage[dvipsnames,table]{xcolor}
 %
-\RequirePackage{pdfsync}
+\usepackage{pdfsync}
 %
 \RequirePackage[xetex]{hyperref}
-\RequirePackage{hypcap}
 %
 % refcheck does not work with cleveref by default. refcheck must be hacked
 %
@@ -95,6 +91,11 @@
 %
 \renewcommand{\showlabelfont}{\footnotesize\sffamily\color{VioletRed}}
 
+% color definitions
+%
+\definecolor{darkgray}{gray}{0.30}
+\definecolor{halfgray}{gray}{0.50}
+
 % hyperref setup
 %
 \hypersetup
@@ -109,9 +110,9 @@
   bookmarksopenlevel=1,
   hypertexnames=true, pdfhighlight=/O,
   %
-  %urlcolor=black,
-  %linkcolor=black,
-  %citecolor=black,
+  %urlcolor= \darkgray, 
+  %linkcolor= \darkgray,
+  %citecolor= \darkgray,
   %
   %pdftitle={},
   %pdfauthor={},
